# azure_panel

./: .gitignore  AETHER_ACCESS_README.md  AMBIENT_INTEGRATION_README.md  ARCHITECTURE.md  AZURE_PANEL_ARCHITECTURE.md  AZURE_PANEL_PROJECT_PLAN.md  BYTECONFIRM_BUILD_2.0_INSTALLATION_GUIDE.md  CLAUDE.md  CMakeLists.txt  CMakeLists_old0.txt  CMakeLists_old1.txt  Dockerfile.api  Dockerfile.export  HAL_AETHER_ARCHITECTURE.md  HAL_CORE_README.md  LICENSE  PYTHON_BACKEND_README.md  README.md  build-aether-access.sh  build-aether-hal.sh  config_export.json  create_aetheraccess_presentation.py  create_azure_configs.c  create_deployment_package.sh  create_presentation.py  deploy_aetheraccess_2.0.sh  docker-compose.yml  hal_event_export_daemon.c  rebrand_to_aether_access.sh  rebrand_to_byteconfirm.sh  requirements.txt  setup.py  start_aether_system.sh  start_api_server.sh  start_hal_system.sh  status_hal_system.sh  stop_aether_system.sh  stop_hal_system.sh  temp.txt  test_all_features.py  (+1 more)
.claude/: .axiom_link  CLAUDE.md
.claude/commands/: chronicle.md  inscribe.md  weave.md
.github/workflows/: build.yml
Aether_Access_3.0/: README.md
Aether_Access_3.0/aether_saga/: package-lock.json  tailwind.config.js  vite.config.ts
Aether_Access_3.0/api/: aether_bifrost.py  ambient_integration.py  hal_api_server.py
Aether_Access_3.0/config/: aether.conf.template  aether.env.template
Aether_Access_3.0/docs/: INSTALLATION_GUIDE.md
Aether_Access_3.0/python/: event_monitor.py  hal_bindings.py  hal_interface.py  utils.py
Aether_Access_3.0/scripts/: build-package.sh
adk/: README.md
adk/aether_bifrost/: manifest  pack.sh
adk/aether_familiar/: manifest
adk/aether_hal/: manifest  pack.sh
adk/aether_loom/: manifest
adk/aether_saga/: manifest  pack.sh
adk/aether_skald/: manifest
adk/aether_thrall/: manifest  pack.sh
aether_saga/: index.html  package-lock.json  package.json  tailwind.config.js
aether_saga/src/: App.tsx  index.css
aether_saga/src/api/: bifrost.ts
aether_saga/src/components/: FamiliarChat.tsx  FrostParticles.tsx  Layout.tsx  NorseStatCard.tsx  RunicIcons.tsx
aether_saga/src/pages/: AccessLevels.tsx  Cardholders.tsx  Chronicle.tsx  Dashboard.tsx  Doors.tsx  Events.tsx  People.tsx  Settings.tsx  UnifiedDashboard.tsx  index.ts
api/: aether_bifrost.py  auth.py  database.py  hal_core_api.py  unified_api_server.py
api/familiar/: FAMILIAR.md  __init__.py  tools.py
config/: hal_config.json  hal_config.yaml
deploy/: RELEASE.json  aether-access-2.0.0.tar.gz.sha256  aether-hal-2.0.0.tar.gz.sha256  aether_bifrost.app.sha256  aether_hal.app.sha256  aether_saga.app.sha256  aether_skald.app.sha256  aether_thrall.app.sha256
deploy/config/: ambient.env.template
deploy/scripts/: build-package.sh  install.sh  uninstall.sh
deploy/systemd/: aether-access.service  aether-ambient-export.service
docker/: Dockerfile  docker-compose.yml
docs/: AETHER_SUITE_TOPOLOGY.html  API.md  API_V2_1_REFERENCE.md  ARCHITECTURE.md  AZURE_SDK_REFERENCE.md  BUILD.md  EVENT_EXPORT_DAEMON.md  GUI_API_REFERENCE.md  GUI_ARCHITECTURE.md  HAL_RESEARCH_FINDINGS.md  OSDP_SC_QUICK_REFERENCE.md  OSDP_SECURE_CHANNEL_TROUBLESHOOTING.md  REST_API.md  generate_manual_pdf.py
examples/: basic_access.c  card_provisioning.c  complete_sdk_demo.c  event_subscription.c  osdp_secure_demo.c  test_json_export.c
gui/: QUICK_START.md
gui/backend/: aetheraccess_gui_server_v2.py  api_aether.py  api_v1_frontend.py  api_v2_1.py  database.py  event_reporting.py  hal_client.py  hal_gui_server.py  io_control.py  io_monitoring.py  main_server.py  requirements.txt
gui/examples/: README.md  bash_examples.sh  javascript_client_example.js  monitoring_dashboard.py  python_client_example.py
gui/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
include/: hal_public.h  hal_types.h  osdp_types.h
poc/: CMakeLists.txt  PROOF_OF_CONCEPT_PLAN.md
poc/app1_hal_engine/: access_logic.c  access_logic.h  card_database.c  card_database.h  config.c  config.h  event_producer.c  event_producer.h  hal_engine.c  hal_engine.h  ipc_publisher.c  ipc_publisher.h  main.c  wiegand_handler.c  wiegand_handler.h
poc/app2_ambient_forwarder/: ambient_client.c  ambient_client.h  config.c  config.h  forwarder.c  forwarder.h  ipc_subscriber.c  ipc_subscriber.h  main.c  retry_queue.c  retry_queue.h  uuid_registry.c  uuid_registry.h
poc/config/: ambient_forwarder.json  devices.json  hal_engine.json
poc/scripts/: build.sh  seed_database.sh  start_poc.sh  stop_poc.sh
poc/shared/: event_types.h  ipc_common.h  json_serializer.c  json_serializer.h  logger.c  logger.h  uuid_utils.c  uuid_utils.h
poc/tests/: test_ipc.c  test_json.c  test_uuid.c
poc/tools/: hal_logs.c  hal_status.c  monitor_events.c  simulate_badge.c  test_ambient.c
python/: __init__.py  card_provisioning.py
schema/: card_holder_access_levels.sql  hal_events.sql  panels_hierarchy.sql  sdk_tables.sql  user_management.sql
scripts/: build.sh  deploy.sh  test.sh
src/hal_core/: access_logic.c  access_logic.h  access_logic_sdk.c  access_logic_sdk.h  card_database.c  card_database.h  config.c  config.h  diagnostic_logger.c  diagnostic_logger.h  event_database.c  event_database.h  event_exporter.c  event_exporter.h  event_manager.c  event_manager.h  hal.c  hal.h  json_config.c  json_config.h  osdp_reader.c  osdp_reader.h  osdp_sc_logging.c  osdp_sc_logging.h  osdp_secure_channel.c  osdp_secure_channel.h
src/loom/: README.md  __init__.py  errors.py  health.py  schema_registry.py  tlv_codec.py  translator.py
src/sdk_wrapper/: command_handler.c  sdk_interface.c
src/utils/: logging.c  queue.c  timestamp.c
systemd/: hal-system.service
tests/: test_access_event.c  test_card_database.c  test_config.c  test_hal_aether_integration.py  test_hal_complete.c  test_hal_integration.c  test_hal_with_db.c  test_osdp_reader.c  test_osdp_secure_channel.c  test_sdk_database.c  test_sdk_holidays.c  test_sdk_integration.c  test_sdk_permissions.c  test_tailgating_demo.c  test_timezone.c
tools/: hal_cli.py  hal_feedback_loop.py  hal_terminal.py
(+80 files in other folders)
